--- a/formular.html
+++ b/formular.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
-    <title>Home</title>
+    <title>Document</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/select2/dist/js/select2.full.min.js"></script>
@@ -21,15 +21,15 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home
-                  <span class="visually-hidden">(current)</span>
-                </a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="random.html">random</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formular.html">Formulář</a>
+                <a class="nav-link active" href="formular.html">Formulář
+                    <span class="visually-hidden">(current)</span>
+                </a>
               </li>
             </ul>
                   <ul class="nav justify-content-end">
@@ -37,8 +37,8 @@
                       <a class="nav-link" href="login.html">Přihlášení</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="registrace.html">Registrace</a>
-                    </li>
+                        <a class="nav-link" href="registrace.html">Registrace</a>
+                      </li>
                   </ul>
                 </div>
               </li>
@@ -46,8 +46,5 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid">
-        <p>skibidi idk</p>
-      </div>
 </body>
-</html> 
+</html>
