--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Přihlášení</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/select2/dist/js/select2.full.min.js"></script>
@@ -13,6 +13,17 @@
     <link rel="stylesheet" href="node_modules/bootswatch/dist/slate/bootstrap.min.css">
 </head>
 <body>
-    
+    <div class="container-fluid">
+    <h2>Přihlášení</h2>
+    <form action="/login" method="post">
+        <label for="username">Login:</label>
+        <input type="text" id="username" name="username" required><br><br>
+
+        <label for="password">Heslo:</label>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <button type="submit">Přihlásit se</button>
+    </form>
+</div>
 </body>
 </html>
