--- a/random.html
+++ b/random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
-    <title>Home</title>
+    <title>Document</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/select2/dist/js/select2.full.min.js"></script>
@@ -21,12 +21,12 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home
-                  <span class="visually-hidden">(current)</span>
-                </a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="random.html">random</a>
+                <a class="nav-link active" href="random.html">random
+                <span class="visually-hidden">(current)</span>
+            </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="formular.html">Formulář</a>
@@ -46,8 +46,6 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid">
-        <p>skibidi idk</p>
-      </div>
+
 </body>
-</html> 
+</html>
