--- a/formular.html
+++ b/formular.html
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Domů</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="random.html">random</a>
+                <a class="nav-link" href="random.html">Postup projektu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="formular.html">Formulář
@@ -32,12 +32,13 @@
                 </a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Modely</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                  Značky aut <i class="fa fa-car"></i>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">auto1</a>
-                  <a class="dropdown-item" href="#">auto2</a>
-                  <a class="dropdown-item" href="#">auto3</a>
-                  <a class="dropdown-item" href="#">auto4</a>
+                  <a class="dropdown-item" href="indexauto1.html">BMW</a>
+                  <a class="dropdown-item" href="indexauto2.html">Audi</a>
+                  <a class="dropdown-item" href="indexauto3.html">Mercedes-Benz</a>
+                  <a class="dropdown-item" href="indexauto4.html">Porsche</a>
                 </div>
               </li>
             </ul>
