--- a/index.html
+++ b/index.html
@@ -21,46 +21,41 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home
+                <a class="nav-link active" href="index.html">Domů
                   <span class="visually-hidden">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="random.html">random</a>
+                <a class="nav-link" href="random.html">Postup projektu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="formular.html">Formulář</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Modely</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                  Značky aut <i class="fa fa-car"></i>
+                </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">auto1</a>
-                  <a class="dropdown-item" href="#">auto2</a>
-                  <a class="dropdown-item" href="#">auto3</a>
-                  <a class="dropdown-item" href="#">auto4</a>
+                  <a class="dropdown-item" href="indexauto1.html">BMW</a>
+                  <a class="dropdown-item" href="indexauto2.html">Audi</a>
+                  <a class="dropdown-item" href="indexauto3.html">Mercedes-Benz</a>
+                  <a class="dropdown-item" href="indexauto4.html">Porsche</a>
                 </div>
               </li>
             </ul>
-                  <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                      <a class="nav-link" href="login.html">Přihlášení</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="registrace.html">Registrace</a>
-                    </li>
-                  </ul>
-                </div>
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Přihlášení</a>
               </li>
-            
+              <li class="nav-item">
+                <a class="nav-link" href="registrace.html">Registrace</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
       <div class="container-fluid">
-        <div class="progress">
-          <div id="progress-bar" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-           <!-- netusim proc, ale fr to nejde odsadit od navbaru-->
-        </div>
-        <p>skibidi idk</p>
+        <p>tady by mel byt carousel</p>
       </div>
 </body>
-</html> 
+</html>
