--- a/random.html
+++ b/random.html
@@ -13,6 +13,17 @@
     <link rel="stylesheet" href="node_modules/bootswatch/dist/slate/bootstrap.min.css">
 </head>
 <body>
+  <style>
+            .progress {
+            height: 30px; 
+            border-radius: 15px; 
+            background-color: whitesmoke; 
+        }
+        .progress-bar {
+            border-radius: 15px;
+            background-color: greenyellow;
+        }
+  </style>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +32,10 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Domů</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="random.html">random
+                <a class="nav-link active" href="random.html">Postup projektu
                 <span class="visually-hidden">(current)</span>
             </a>
               </li>
@@ -32,29 +43,37 @@
                 <a class="nav-link" href="formular.html">Formulář</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Modely</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                  Značky aut <i class="fa fa-car"></i>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">auto1</a>
-                  <a class="dropdown-item" href="#">auto2</a>
-                  <a class="dropdown-item" href="#">auto3</a>
-                  <a class="dropdown-item" href="#">auto4</a>
+                  <a class="dropdown-item" href="indexauto1.html">BMW</a>
+                  <a class="dropdown-item" href="indexauto2.html">Audi</a>
+                  <a class="dropdown-item" href="indexauto3.html">Mercedes-Benz</a>
+                  <a class="dropdown-item" href="indexauto4.html">Porsche</a>
                 </div>
               </li>
             </ul>
-                  <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                      <a class="nav-link" href="login.html">Přihlášení</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="registrace.html">Registrace</a>
-                    </li>
-                  </ul>
-                </div>
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Přihlášení</a>
               </li>
-            
+              <li class="nav-item">
+                <a class="nav-link" href="registrace.html">Registrace</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
+
+    <div class="container mt-4">
+        <h3>Progress Bar</h3>
+        <div class="progress">
+            <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="text-center mt-3">
+            <p><strong>75% projektu dokončeno</strong></p>
+        </div>
+    </div>
 
 </body>
 </html>
