--- a/index.html
+++ b/index.html
@@ -54,8 +54,42 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid">
-        <p>tady by mel byt carousel</p>
+      <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <h3 class="text-center">Ukázka vozidel</h3>
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="auta_pics/audi_a6.jpg" alt="audi_a6" class="mx-auto d-block" style="height: 600px; width: auto;">
+          </div>
+          <div class="carousel-item">
+            <img src="auta_pics/bmw_m2.jpg" alt="bmw_m2" class="mx-auto d-block" style="height: 600px; width: auto; ">
+          </div>
+          <div class="carousel-item">
+            <img src="auta_pics/mercedes_glc.jpeg" alt="mercedes_glc" class="mx-auto d-block" style="height: 600px; width: auto;">
+          </div>
+          <div class="carousel-item">
+            <img src="auta_pics/porsche_911.jpg" alt="porsche_911" class="mx-auto d-block" style="height: 600px; width: auto;">
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
       </div>
 </body>
 </html>
