--- a/formular.html
+++ b/formular.html
@@ -56,5 +56,22 @@
           </div>
         </div>
       </nav>
+      <form action="/action_page.php">
+        <div class="mb-3 mt-3">
+          <label for="email">Email:</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        </div>
+    </form>
+    <div id="editor">
+        <p>Váš dotaz...</p>
+    </div>
+    <script>
+        ClassicEditor
+            .create( document.querySelector( '#editor' ) )
+            .catch( error => {
+                console.error( error );
+            } );
+    </script>
+
 </body>
 </html>
