--- a/index.html
+++ b/index.html
@@ -66,15 +66,27 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="auta_pics/audi_a6.jpg" alt="audi_a6" class="mx-auto d-block" style="height: 600px; width: auto;">
+            <div class="carousel-caption">
+              <h2 class="fw-bold badge bg-dark">Audi A6</h3>
+            </div> 
           </div>
           <div class="carousel-item">
             <img src="auta_pics/bmw_m2.jpg" alt="bmw_m2" class="mx-auto d-block" style="height: 600px; width: auto; ">
+            <div class="carousel-caption">
+              <h2 class="fw-bold badge bg-dark">BMW M2</h3>
+            </div> 
           </div>
           <div class="carousel-item">
             <img src="auta_pics/mercedes_glc.jpeg" alt="mercedes_glc" class="mx-auto d-block" style="height: 600px; width: auto;">
+            <div class="carousel-caption">
+              <h2 class="fw-bold badge bg-dark">Mercedes-Benz GLC</h3>
+            </div> 
           </div>
           <div class="carousel-item">
             <img src="auta_pics/porsche_911.jpg" alt="porsche_911" class="mx-auto d-block" style="height: 600px; width: auto;">
+            <div class="carousel-caption">
+              <h2 class="fw-bold badge bg-dark">Porsche 911</h3>
+            </div> 
           </div>
         </div>
 
