--- a/indexauto3.html
+++ b/indexauto3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
-    <title>Domů</title>
+    <title>Mercedes</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/select2/dist/js/select2.full.min.js"></script>
