--- a/random.html
+++ b/random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
-    <title>Document</title>
+    <title>Progress bar</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/select2/dist/js/select2.full.min.js"></script>
@@ -68,10 +68,10 @@
     <div class="container mt-4">
         <h3>Progress Bar</h3>
         <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div class="text-center mt-3">
-            <p><strong>75% projektu dokončeno</strong></p>
+            <p><strong>100% projektu dokončeno</strong></p>
         </div>
     </div>
 
