--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
-    <title>Home</title>
+    <title>Domů</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/select2/dist/js/select2.full.min.js"></script>
@@ -96,12 +96,12 @@
         <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
           <span class="carousel-control-next-icon"></span>
         </button>
-        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </button>
       </div>
+      <footer class="bg-dark text-white text-center py-3 mt-4">
+        <div class="container">
+          <p style="position: relative;">&copy; 2024 &#x1F913; Všechna práva vyhrazena.</p>
+          <p><a href="dokumentace.pdf" class="text-white">Dokumentace (PDF)</a></p>
+        </div>
+      </footer>
 </body>
 </html>
