--- a/registrace.html
+++ b/registrace.html
@@ -32,7 +32,24 @@
             border-radius: 10px;
             background-color: #2b3e50;
         }
+
+        .form-group {
+            margin-bottom: 1rem;
+        }
+
+        .select2-container .select2-selection--multiple {
+            height: auto;
+            min-height: calc(3.5rem + 2px);
+            padding: 0.75rem;
+        }
     </style>
+    <script>
+        $(document).ready(function() {
+            $('#interests').select2({
+                allowClear: true
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="container">
@@ -317,6 +334,76 @@
                     </select>
                     <label for="country">Země:</label>
                 </div>
+
+                <div class="form-group mt-3">
+                    <label for="interests">Zájmy:</label>
+                    <select name="interests" id="interests" class="form-control" multiple="multiple" required>
+                        <option value="Archery">Archery</option>
+                        <option value="Art">Art</option>
+                        <option value="Astronomy">Astronomy</option>
+                        <option value="Astrology">Astrology</option>
+                        <option value="Baking">Baking</option>
+                        <option value="Bird Watching">Bird Watching</option>
+                        <option value="Board Games">Board Games</option>
+                        <option value="Bonsai">Bonsai</option>
+                        <option value="Calligraphy">Calligraphy</option>
+                        <option value="Camping">Camping</option>
+                        <option value="Carpentry">Carpentry</option>
+                        <option value="Chess">Chess</option>
+                        <option value="Collecting">Collecting</option>
+                        <option value="Collecting Antiques">Collecting Antiques</option>
+                        <option value="Cooking">Cooking</option>
+                        <option value="Cooking Classes">Cooking Classes</option>
+                        <option value="Cosplay">Cosplay</option>
+                        <option value="Cycling">Cycling</option>
+                        <option value="Dancing">Dancing</option>
+                        <option value="DIY">DIY</option>
+                        <option value="Drawing">Drawing</option>
+                        <option value="Fishing">Fishing</option>
+                        <option value="Fitness">Fitness</option>
+                        <option value="Fitness Training">Fitness Training</option>
+                        <option value="Fashion">Fashion</option>
+                        <option value="Gaming">Gaming</option>
+                        <option value="Gardening">Gardening</option>
+                        <option value="Genealogy">Genealogy</option>
+                        <option value="Graphic Design">Graphic Design</option>
+                        <option value="Hiking">Hiking</option>
+                        <option value="Horse Riding">Horse Riding</option>
+                        <option value="Investing">Investing</option>
+                        <option value="Knitting">Knitting</option>
+                        <option value="Magic">Magic</option>
+                        <option value="Martial Arts">Martial Arts</option>
+                        <option value="Meditation">Meditation</option>
+                        <option value="Movies">Movies</option>
+                        <option value="Music">Music</option>
+                        <option value="Origami">Origami</option>
+                        <option value="Painting">Painting</option>
+                        <option value="Photography">Photography</option>
+                        <option value="Podcasting">Podcasting</option>
+                        <option value="Puzzles">Puzzles</option>
+                        <option value="Reading">Reading</option>
+                        <option value="Robotics">Robotics</option>
+                        <option value="Rock Climbing">Rock Climbing</option>
+                        <option value="Running">Running</option>
+                        <option value="Science">Science</option>
+                        <option value="Scuba Diving">Scuba Diving</option>
+                        <option value="Scrapbooking">Scrapbooking</option>
+                        <option value="Skiing">Skiing</option>
+                        <option value="Snowboarding">Snowboarding</option>
+                        <option value="Sports">Sports</option>
+                        <option value="Stand-Up Comedy">Stand-Up Comedy</option>
+                        <option value="Surfing">Surfing</option>
+                        <option value="Technology">Technology</option>
+                        <option value="Travel Blogging">Travel Blogging</option>
+                        <option value="Traveling">Traveling</option>
+                        <option value="Volunteering">Volunteering</option>
+                        <option value="Wine Tasting">Wine Tasting</option>
+                        <option value="Writing">Writing</option>
+                        <option value="Writing Poetry">Writing Poetry</option>
+                        <option value="Yoga">Yoga</option>
+                    </select>
+                </div>
+                
 
                 <div class="form-check mt-3">
                     <input type="checkbox" class="form-check-input" id="terms" name="terms" required>
